[tool.poetry]
name = "rl-code"
version = "0.1.0"
description = ""
authors = ["小凌凌 <541023490@qq.com>"]
readme = "README.md"
packages = [{ include = "rl_code" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
